k8s/manifest/network-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tokenvisor-http-route
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: tokenvisor
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /vm
      backendRefs:
        - name: vmauth-vmauth
          port: 8427
    - matches:
        - path:
            type: PathPrefix
            value: /vl
      backendRefs:
        - name: vmauth-vmauth
          port: 8427
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: emu-api-server
          port: 5969
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: studio-frontend-server
          port: 4969
